<resources>
    <string name="app_name">Retail Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_product">Select Product</string>
    <string name="brand_style">Brand/Style</string>
    <string name="unit">unit*</string>
    <string name="price">price*</string>
    <string name="app_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_add_id">ca-app-pub-2122789248840144/4292660234</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>
    <string name="text_connect">Connect</string>
    <string name="text_disconnect">Diconnect</string>
    <string name="text_enable_bluetooth">Enable Bluetooth</string>
    <string name="text_disable_bluetooth">Disable Bluetooth</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_stop_scan">Scan Devices</string>
    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>
    <string name="text_pair">Pair</string>
    <string name="text_print_demo">Print Demo</string>
    <string name="text_print_barcode">Print Barcode</string>
    <string name="text_print_image">Print Image</string>
    <string name="text_print_receipt">Print Receipt</string>
    <string name="text_print_text">Print Text</string>
    <string name="Stock">Stock</string>
    <string name="sells">Sells</string>
    <string name="customers">Customers</string>
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="activity_label">Shipping Address</string>
    <string name="category_name">Category Name</string>
    <string name="category_desc">Description(Optional)</string>
    <string name="prd_name">Product Name</string>
    <string name="prd_code">Product Code</string>
    <string name="prd_price">Product Price</string>
    <string name="prd_sell_price">Sell Price</string>
    <string name="prd_unit">Product Unit</string>
    <string name="prd_brand">Product Brand</string>
    <string name="prd_size">Product Size</string>
    <string name="prd_available_stock">Available Stock</string>
    <string name="prd_category">Product Category</string>
    <string name="label_address">Address</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
    <string name="label_zip">ZIP</string>
    <string name="label_save">Save</string>
    <string name="error_string">Field must not be empty.</string>
    <string name="action_add_favourite">Add Favourite</string>
    <string name="action_play_next">Play Next</string>
    <string name="action_add_stock">Add Stock</string>
    <string name="action_disable_item">Disable Item</string>
    <string name="action_remove_stock">Remove Stock</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pref_key_custom_categories">custom_categories</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Twezimbe"</string>
    <string name="retail_manager">"Retail Manager"</string>
    <string name="app_name_twezimbe">"Twezimbe POS"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password required</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="close">Close</string>
    <string name="base_url">https://8b08323b471a.ngrok.io</string>
    <string name="username">Username</string>
    <string name="enter_details">Enter Details</string>
    <string name="action_edit_category">Edit Category</string>
    <string name="prd_supplier">Supplier</string>
    <string name="cust_name">Customer Name</string>
    <string name="cust_type">Customer Type</string>
    <string name="customerGender">Gender</string>
    <string name="customerPhone">Customer Phone</string>
    <string name="customerEmail">Customer Email</string>
    <string name="customerAddress">Customer Address</string>
    <string name="customerDueAmount">Customer Due Amount</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_company_name">Supplier Company Name</string>
    <string name="supplier_contact_person">Supplier Contact Person</string>
    <string name="supplier_phone_number">Phone Number</string>
    <string name="supplier_address">Address</string>
    <string name="supplier_bank_name">Supplier Bank Name</string>
    <string name="supplier_bank_account">Bank Account</string>
    <string name="supplier_email">Email</string>
    <string name="supplier_website">Website</string>
    <string name="supplier_description">Description</string>
    <string name="empty_view_title_text">Nothing in stock&#8230;</string>
    <string name="empty_view_subtitle_text">Use \"Add Items\" Tab to add products</string>
    <string name="empty_category_view_title_text">No Categories Found</string>
    <string name="empty_category_view_subtitle_text">Use \"Add Items\" Tab to add categories</string>
    <string name="spinner_title">Pay With</string>
    <string name="search_purchase">Search Purchase</string>
    <string name="no_purchases_found">No Purchases Found</string>
    <string name="prd">Product</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="unit_price">Unit Price</string>
    <string name="purchase_qty">Quantity</string>
    <string name="total_amount">Total Amount</string>
    <string name="purchase_payment">Pay Amount</string>
    <string name="purchase_time">Time</string>
    <string name="prdVariation">Product Variation</string>
    <string name="variation_name">Variation Name</string>
    <string name="prd_var">Product Variation</string>
    <string name="title_activity_serial_port">SerialPortActivity</string>
    <string name="title_COM_USB_UART">USB UART</string>
    <string name="title_COM_BASE_RS232">BASE RS232</string>
    <string name="title_COM_OTG_USB2Serial">OTG USB2Serial</string>
    <string name="description_COM_USB_UART">Normal USB cable, UART port on PC side</string>
    <string name="description_COM_BASE_RS232">typical RJ45 serial cable connect to the RS232 port of the Base</string>
    <string name="description_COM_OTG_USB2Serial">OTG cable + USB2Serial</string>
    <string name="title_activity_printer_ex">PrinterExActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="check_balance">BALANCE</string>
    <string name="set_keys">SET KEYS</string>
    <string name="ministatement">MINISTATEMENT</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="mybalance">Refresh Balance</string>
    <string name="resyncbillers">Update Billers</string>
    <string name="updateteskey">Update TES Keys</string>
    <string name="log_out">Log Out</string>
    <string name="fees_taxes">Fees &amp; Taxes</string>
    <string name="passwordForgotten">
        Please contact your bank branch to initiate a reset immediately or contact 0312300200 / 0414351000 for assistance
    </string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_passsword">Enter Password</string>
    <string name="login">Login Now</string>
    <string name="tran_summary">CONFIRM TRANSACTION</string>
    <string name="enter_customer_details">Enter customer details</string>
    <string name="account_number">Account Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="narration">Narration</string>
    <string name="schoolcode">School Code</string>
    <string name="student_number">Student Number</string>
    <string name="amount">Amount (UGX)</string>
    <string name="validate_customer_details">Validate customer</string>
    <string name="proceed_to_pay">PROCEED</string>
    <string name="AIDparaload">AID parameter download</string>
    <string name="Pay_success">Successful</string>
    <string name="aidparastorefail">AID parameter store failure:</string>
    <string name="aidstorefail">AID store failure:</string>
    <string name="amount1">Amount</string>
    <string name="back_home">Back To Homepage</string>
    <string name="bank_card">Use Card</string>
    <string name="bank_cardless">Go Cardless</string>
    <string name="bankoffdatafail">Bank off,get data failure</string>
    <string name="busy">Printer busy</string>
    <string name="cancel">Cancel</string>
    <string name="cardno">Card No.：</string>
    <string name="cardno1">Card No.</string>
    <string name="cardnoincorr">Card No. incorrect，double check!</string>
    <string name="checknetwork">Check network is available</string>
    <string name="chooseapp">Choose APP：</string>
    <string name="clear">Clear</string>
    <string name="comm_para">Comm parameters</string>
    <string name="commparastoresucc">Stored success</string>
    <string name="commtimeout">Comm Timeout</string>
    <string name="communication">Communication</string>
    <string name="confirm">Confirm</string>
    <string name="confirmcard">Confirm card No.</string>
    <string name="confirmprint2nd">Confirm to print 2nd copy</string>
    <string name="confirmprint3rd">Confirm to print 3rd copy</string>
    <string name="connhostfail">Connect host failure</string>
    <string name="consumcard">Card No.</string>
    <string name="consumsucc">Transaction successful</string>
    <string name="conv8583packwrong">8583package wrong</string>
    <string name="correct">Correct</string>
    <string name="datalennoteno">Data length not enough</string>
    <string name="dataverifail">Data verify failure</string>
    <string name="date">Date</string>
    <string name="downkey">Download key</string>
    <string name="downloadicparasucc">Download AID parameter success</string>
    <string name="downrfparasucc">Download RF parameter success</string>
    <string name="foucustheqr">Focus to the QR code</string>
    <string name="host_address">Host IP Address</string>
    <string name="host_port">Host Port</string>
    <string name="hostreterrorcode">Error code host returned:</string>
    <string name="merchantname">Merchant name</string>
    <string name="merchantno">Merchant No.</string>
    <string name="printing">Printing Receipt…</string>
    <string name="refundsucc">Refund success</string>
    <string name="sequenceno">Sequence No.</string>
    <string name="terminalno">Terminal No.</string>
</resources>