<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:icbc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/trans_title" />

    <ImageView
        android:id="@+id/succ_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/success_new" />

    <TextView
        android:id="@+id/succ_textname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/consumsucc"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#f6f5fa"
        android:gravity="center_horizontal"
        android:paddingTop="70dp"
        android:text="@string/printing"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#a5a6af"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/hint_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="#f6f5fa"
            android:text="@string/printing"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/refundsucc" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/print_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/list_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/amount_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/amount1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/amount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="8dp"
                    android:textColor="#ff0000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/dash_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/merchant_name_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="8dp"
                        android:text="@string/merchantname"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/merchant_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/merchant_name_hint"
                        android:padding="8dp"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/merchant_id_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/merchant_name_hint"
                        android:layout_alignParentLeft="true"
                        android:padding="8dp"
                        android:text="@string/merchantno"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/merchant_id_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/merchant_name_value"
                        android:layout_toRightOf="@+id/merchant_name_hint"
                        android:padding="8dp"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/terminal_id_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/merchant_id_hint"
                        android:layout_alignParentLeft="true"
                        android:padding="8dp"
                        android:text="@string/terminalno"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/terminal_id_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/merchant_id_value"
                        android:layout_toRightOf="@+id/merchant_name_hint"
                        android:padding="8dp"
                        android:textSize="20sp" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/dash_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/card_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="8dp"
                        android:text="@string/cardno1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/card_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/card_hint"
                        android:padding="8dp"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/trace_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_hint"
                        android:layout_alignParentLeft="true"
                        android:padding="8dp"
                        android:text="@string/sequenceno"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/trace_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_hint"
                        android:layout_toRightOf="@+id/card_hint"
                        android:padding="8dp"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/time_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/trace_hint"
                        android:layout_alignParentLeft="true"
                        android:padding="8dp"
                        android:text="@string/date"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/time_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/trace_hint"
                        android:layout_toRightOf="@+id/card_hint"
                        android:padding="8dp"
                        android:text="2222"
                        android:textSize="20sp" />
                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
